conf/iptables
# /etc/sysconfig/iptabels

*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]
-A INPUT -i "${WIFI_IF}" -p udp -m udp --dport 67 -j ACCEPT
-A INPUT -i "${WIFI_IF}" -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -i "${WIFI_IF}" -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 0 -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -s "${SSH_ALLOWED}" -p tcp -m tcp --dport 22 -j ACCEPT

-A FORWARD -d "${LOCAL_NET}" -j ACCEPT
-A FORWARD -s "${LOCAL_NET}" -j ACCEPT
-A FORWARD -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -j ACCEPT
COMMIT

nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
-A POSTROUTING -s "${LOCAL_NET}" -j MASQUERADE
